docs/api/qiskit/0.25/qiskit.pulse.instructions.SetFrequency.mdx
---
title: SetFrequency
description: API reference for qiskit.pulse.instructions.SetFrequency
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.instructions.SetFrequency
---

<span id="qiskit-pulse-instructions-setfrequency" />

# qiskit.pulse.instructions.SetFrequency

<Class id="qiskit.pulse.instructions.SetFrequency" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/instructions/frequency.py" signature="SetFrequency(frequency, channel, name=None)" modifiers="class">
  Set the channel frequency. This instruction operates on `PulseChannel` s. A `PulseChannel` creates pulses of the form

$$
Re[\exp(i 2\pi f jdt + \phi) d_j].
$$

  Here, $f$ is the frequency of the channel. The instruction `SetFrequency` allows the user to set the value of $f$. All pulses that are played on a channel after SetFrequency has been called will have the corresponding frequency.

  The duration of SetFrequency is 0.

  Creates a new set channel frequency instruction.

  **Parameters**

  *   **frequency** (`Union`\[`float`, `ParameterExpression`]) – New frequency of the channel in Hz.
  *   **channel** ([`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")) – The channel this instruction operates on.
  *   **name** (`Optional`\[`str`]) – Name of this set channel frequency instruction.

  ### \_\_init\_\_

  <Function id="qiskit.pulse.instructions.SetFrequency.__init__" signature="__init__(frequency, channel, name=None)">
    Creates a new set channel frequency instruction.

    **Parameters**

    *   **frequency** (`Union`\[`float`, `ParameterExpression`]) – New frequency of the channel in Hz.
    *   **channel** ([`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")) – The channel this instruction operates on.
    *   **name** (`Optional`\[`str`]) – Name of this set channel frequency instruction.
  </Function>

  ## Methods

  |                                                                                                                                                          |                                                                                                                                                                               |
  | -------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.pulse.instructions.SetFrequency.__init__ "qiskit.pulse.instructions.SetFrequency.__init__")(frequency, channel\[, name])            | Creates a new set channel frequency instruction.                                                                                                                              |
  | [`append`](#qiskit.pulse.instructions.SetFrequency.append "qiskit.pulse.instructions.SetFrequency.append")(schedule\[, name])                            | Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`. |
  | [`assign_parameters`](#qiskit.pulse.instructions.SetFrequency.assign_parameters "qiskit.pulse.instructions.SetFrequency.assign_parameters")(value\_dict) | Modify and return self with parameters assigned according to the input.                                                                                                       |
  | [`ch_duration`](#qiskit.pulse.instructions.SetFrequency.ch_duration "qiskit.pulse.instructions.SetFrequency.ch_duration")(\*channels)                    | Return duration of the supplied channels in this Instruction.                                                                                                                 |
  | [`ch_start_time`](#qiskit.pulse.instructions.SetFrequency.ch_start_time "qiskit.pulse.instructions.SetFrequency.ch_start_time")(\*channels)              | Return minimum start time for supplied channels.                                                                                                                              |
  | [`ch_stop_time`](#qiskit.pulse.instructions.SetFrequency.ch_stop_time "qiskit.pulse.instructions.SetFrequency.ch_stop_time")(\*channels)                 | Return maximum start time for supplied channels.                                                                                                                              |
  | [`draw`](#qiskit.pulse.instructions.SetFrequency.draw "qiskit.pulse.instructions.SetFrequency.draw")(\[dt, style, filename, interp\_method, …])          | Plot the instruction.                                                                                                                                                         |
  | [`flatten`](#qiskit.pulse.instructions.SetFrequency.flatten "qiskit.pulse.instructions.SetFrequency.flatten")()                                          | Return itself as already single instruction.                                                                                                                                  |
  | [`insert`](#qiskit.pulse.instructions.SetFrequency.insert "qiskit.pulse.instructions.SetFrequency.insert")(start\_time, schedule\[, name])               | Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.                                              |
  | [`is_parameterized`](#qiskit.pulse.instructions.SetFrequency.is_parameterized "qiskit.pulse.instructions.SetFrequency.is_parameterized")()               | Return True iff the instruction is parameterized.                                                                                                                             |
  | [`shift`](#qiskit.pulse.instructions.SetFrequency.shift "qiskit.pulse.instructions.SetFrequency.shift")(time\[, name])                                   | Return a new schedule shifted forward by time.                                                                                                                                |

  ## Attributes

  |                                                                                                                              |                                                                                                                                                    |
  | ---------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`channel`](#qiskit.pulse.instructions.SetFrequency.channel "qiskit.pulse.instructions.SetFrequency.channel")                | Return the [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on. |
  | [`channels`](#qiskit.pulse.instructions.SetFrequency.channels "qiskit.pulse.instructions.SetFrequency.channels")             | Returns the channels that this schedule uses.                                                                                                      |
  | [`duration`](#qiskit.pulse.instructions.SetFrequency.duration "qiskit.pulse.instructions.SetFrequency.duration")             | Duration of this instruction.                                                                                                                      |
  | [`frequency`](#qiskit.pulse.instructions.SetFrequency.frequency "qiskit.pulse.instructions.SetFrequency.frequency")          | New frequency.                                                                                                                                     |
  | [`id`](#qiskit.pulse.instructions.SetFrequency.id "qiskit.pulse.instructions.SetFrequency.id")                               | Unique identifier for this instruction.                                                                                                            |
  | [`instructions`](#qiskit.pulse.instructions.SetFrequency.instructions "qiskit.pulse.instructions.SetFrequency.instructions") | Iterable for getting instructions from Schedule tree.                                                                                              |
  | [`name`](#qiskit.pulse.instructions.SetFrequency.name "qiskit.pulse.instructions.SetFrequency.name")                         | Name of this instruction.                                                                                                                          |
  | [`operands`](#qiskit.pulse.instructions.SetFrequency.operands "qiskit.pulse.instructions.SetFrequency.operands")             | Return instruction operands.                                                                                                                       |
  | [`parameters`](#qiskit.pulse.instructions.SetFrequency.parameters "qiskit.pulse.instructions.SetFrequency.parameters")       | Parameters which determine the instruction behavior.                                                                                               |
  | [`start_time`](#qiskit.pulse.instructions.SetFrequency.start_time "qiskit.pulse.instructions.SetFrequency.start_time")       | Relative begin time of this instruction.                                                                                                           |
  | [`stop_time`](#qiskit.pulse.instructions.SetFrequency.stop_time "qiskit.pulse.instructions.SetFrequency.stop_time")          | Relative end time of this instruction.                                                                                                             |

  ### append

  <Function id="qiskit.pulse.instructions.SetFrequency.append" signature="append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to be appended
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` a this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### assign\_parameters

  <Function id="qiskit.pulse.instructions.SetFrequency.assign_parameters" signature="assign_parameters(value_dict)">
    Modify and return self with parameters assigned according to the input.

    **Parameters**

    **value\_dict** (`Dict`\[`ParameterExpression`, `Union`\[`ParameterExpression`, `float`, `int`]]) – A mapping from Parameters to either numeric values or another Parameter expression.

    **Return type**

    `Instruction`

    **Returns**

    Self with updated parameters.
  </Function>

  ### ch\_duration

  <Function id="qiskit.pulse.instructions.SetFrequency.ch_duration" signature="ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### ch\_start\_time

  <Function id="qiskit.pulse.instructions.SetFrequency.ch_start_time" signature="ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### ch\_stop\_time

  <Function id="qiskit.pulse.instructions.SetFrequency.ch_stop_time" signature="ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  ### channel

  <Attribute id="qiskit.pulse.instructions.SetFrequency.channel">
    Return the [`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel") that this instruction is scheduled on.

    **Return type**

    [`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")
  </Attribute>

  ### channels

  <Attribute id="qiskit.pulse.instructions.SetFrequency.channels">
    Returns the channels that this schedule uses.

    **Return type**

    `Tuple`\[[`PulseChannel`](qiskit.pulse.channels#qiskit.pulse.channels.PulseChannel "qiskit.pulse.channels.PulseChannel")]
  </Attribute>

  ### draw

  <Function id="qiskit.pulse.instructions.SetFrequency.draw" signature="draw(dt=1, style=None, filename=None, interp_method=None, scale=1, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, channels=None)">
    Plot the instruction.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples
    *   **style** (*Optional\[SchedStyle]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **plot\_all** (`bool`) – Plot empty channels
    *   **plot\_range** (`Optional`\[`Tuple`\[`float`]]) – A tuple of time range to plot
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** (`bool`) – Draw event table for supported instructions
    *   **label** (`bool`) – Label individual instructions
    *   **framechange** (`bool`) – Add framechange indicators
    *   **channels** (`Optional`\[`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  ### duration

  <Attribute id="qiskit.pulse.instructions.SetFrequency.duration">
    Duration of this instruction.

    **Return type**

    `int`
  </Attribute>

  ### flatten

  <Function id="qiskit.pulse.instructions.SetFrequency.flatten" signature="flatten()">
    Return itself as already single instruction.

    **Return type**

    `Instruction`
  </Function>

  ### frequency

  <Attribute id="qiskit.pulse.instructions.SetFrequency.frequency">
    New frequency.

    **Return type**

    `Union`\[`float`, `ParameterExpression`]
  </Attribute>

  ### id

  <Attribute id="qiskit.pulse.instructions.SetFrequency.id">
    Unique identifier for this instruction.

    **Return type**

    `int`
  </Attribute>

  ### insert

  <Function id="qiskit.pulse.instructions.SetFrequency.insert" signature="insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** (`int`) – Time to insert the schedule schedule
    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to insert
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` inserted with this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### instructions

  <Attribute id="qiskit.pulse.instructions.SetFrequency.instructions">
    Iterable for getting instructions from Schedule tree.

    **Return type**

    `Tuple`\[`Tuple`\[`int`, `Instruction`]]
  </Attribute>

  ### is\_parameterized

  <Function id="qiskit.pulse.instructions.SetFrequency.is_parameterized" signature="is_parameterized()">
    Return True iff the instruction is parameterized.

    **Return type**

    `bool`
  </Function>

  ### name

  <Attribute id="qiskit.pulse.instructions.SetFrequency.name">
    Name of this instruction.

    **Return type**

    `str`
  </Attribute>

  ### operands

  <Attribute id="qiskit.pulse.instructions.SetFrequency.operands">
    Return instruction operands.

    **Return type**

    `Tuple`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.instructions.SetFrequency.parameters">
    Parameters which determine the instruction behavior.

    **Return type**

    `Set`
  </Attribute>

  ### shift

  <Function id="qiskit.pulse.instructions.SetFrequency.shift" signature="shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** (`int`) – Time to shift by
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    The shifted schedule.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ### start\_time

  <Attribute id="qiskit.pulse.instructions.SetFrequency.start_time">
    Relative begin time of this instruction.

    **Return type**

    `int`
  </Attribute>

  ### stop\_time

  <Attribute id="qiskit.pulse.instructions.SetFrequency.stop_time">
    Relative end time of this instruction.

    **Return type**

    `int`
  </Attribute>
</Class>

